# trash-image-sorting

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  dvc.yaml  params.yaml  pyproject.toml  run_load_tests.sh  tasks.py
.devcontainer/: devcontainer.json  post_create.sh
.dvc/: config
.github/workflows/: api-tests.yaml  build-api-image.yaml  build-on-release.yaml  build-train-image.yaml  cml_data.yaml  linting.yaml  tests.yaml
configs/: config.yaml
configs/train/: default.yaml
data/: raw.dvc
data/processed/: all_images.pt.dvc  all_labels.pt.dvc  all_metadata.pt.dvc
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: last.ckpt.dvc  model.pth.dvc
notebooks/: data-loading-demo.ipynb  image-prediction-demo.ipynb
reports/: README.md  eval_metrics.json  report.html  report.py
scripts/: train_gcp.sh
src/trashsorting/: api.py  data.py  dataset_statistics.py  evaluate.py  model.py  predict.py  train.py
src/trashsorting/static/: index.html
src/trashsorting/utils/: transform.py
tests/: conftest.py  test_api.py  test_data.py  test_model_init.py  test_model_training.py
tests/integrationtests/: __init__.py  test_api.py
tests/performancetests/: __init__.py  locustfile.py
tests/unittests/: __init__.py  test_data.py
